src/test/deca/context/invalid/instanceof-notClass.context
instanceof-notClass.deca:3:
